update the code at 2:00 am

--- a/src/app/modules/applied-jobs/applied-jobs.component.html
+++ b/src/app/modules/applied-jobs/applied-jobs.component.html
@@ -1,7 +1,7 @@
 <app-freelancernav></app-freelancernav>
 
 <br><br>
-<div *ngIf="Applies && Applies.length > 0">
+<div *ngIf="Applies ">
   <div class="container kkjobsrc">
     <p class="applyhead1">Applied Jobs</p>
     <div class="row kkjbbrow">
