update code at 2:15am

--- a/src/app/modules/apply-now/apply-now.component.html
+++ b/src/app/modules/apply-now/apply-now.component.html
@@ -230,7 +230,7 @@
         required
         class="covcont"
       >
-Lorem ipsum dolor sit amet consectetur. Erat pellentesque eleifend at suspendisse. Pulvinar tellus metus mattis hendrerit in nam. Amet ut et commodo odio leo duis proin. Cursus magna dolor lectus turpis varius sem. Et in quisque feugiat sed aliquet semper.</textarea
+      Fill your strong and talents to show the authors</textarea
       >
       <div
         *ngIf="
