--- a/src/app/modules/authprofile/authprofile.component.html
+++ b/src/app/modules/authprofile/authprofile.component.html
@@ -41,7 +41,7 @@
                                     <img class="circ" *ngIf="!User[0].details" src="../assets/Ellipse 33.png"
                                         alt="Pubkin"><span style="margin-left: 10px;">Profile Setup</span> <img
                                         class="navarrow" src="../assets/nav arrow down_.png" alt="Nav"></p>
-                                <p class="prodesc">&nbsp;&nbsp;&nbsp;&nbsp;Lorem Ipsum</p>
+                                <p class="prodesc">&nbsp;&nbsp;&nbsp;&nbsp;Add your looking for skills details</p>
                                 <hr>
                             </div>
                         </div>
@@ -55,7 +55,7 @@
                                     <img class="circ" *ngIf="!User[0].bankingDetails" src="../assets/Ellipse 33.png"
                                         alt="Pubkin"><span style="margin-left: 10px;">Add Banking Details</span> <img
                                         class="navarrow" src="../assets/nav arrow down_.png" alt="Nav"></p>
-                                <p class="prodesc">&nbsp;&nbsp;&nbsp;&nbsp;Add your bank details and work rate</p>
+                                <p class="prodesc">&nbsp;&nbsp;&nbsp;&nbsp;Add your bank details</p>
                                 <hr>
                             </div>
                         </div>
