--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -7,7 +7,7 @@
       <div class="col-xl-6 col-lg-7 pr-3"  style="padding-right: 120px;">
         <div class="rrpubkincenteralign1 float-end rrpubkinheadalign1">
           <p class="rrpubkintxt1" (click)="navigateToProfile('author')">
-            Find talent
+            Find talent1
           </p>
           <p class="rrpubkintxt1"  (click)="navigateToProfile('freelancer')">
             Find work
